Add ReconstructItinery Solution